--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ dev =
     commitizen==2.27.0
     isort==5.10.1
     mypy==0.950
+    types-requests==2.27.26
     pylint==2.13.9
     yamllint==1.26.3
 
