ci: fix syntax for sam parameter-overrides option

--- a/.github/workflows/deploy_to_aws.yaml
+++ b/.github/workflows/deploy_to_aws.yaml
@@ -21,4 +21,4 @@ jobs:
       - run: sam build --use-container
       - run: |
           sam deploy --config-env the_cat_assignment --parameter-overrides \
-          OmdbApiSecretKey,${{ secrets.OMDB_API_SECRET_KEY }}
+          OmdbApiSecretKey=${{ secrets.OMDB_API_SECRET_KEY }}
